tests/compiler/expected/output/BinOperatorTypeError.shtk.txt
MODULE BinOperatorTypeError.shtk
ERROR in Line 4 Col 21

    var i:int = 2 + f
                    ^
Type error, did not expect float,
expected autoInt
